src/App.css
:root {
  --primary-blue: #00b4e2;
}

.container-fluid {
  font-family: 'Poppins', sans-serif;
  max-width: 100rem;
}

/* Splash Page --------------------------------- */

.main {
  padding: 0.625rem;
  margin: 4.5rem auto;
}

.heading {
  font-size: 3rem;
  margin-top: 1.875rem;
  margin-bottom: -0.875rem;
}

.typed-text {
  color: var(--primary-blue);
  font-weight: 700;
  font-size: 4.3rem;
  padding-left: 1.875rem;
}

/* Contact Page -------------------------------- */
.form-container {
  margin-top: 7.5rem;
  margin-bottom: 7.5rem;
  padding-bottom: 27vh;
  max-width: 35rem;
}

.contact-header {
  color:var(--primary-blue);
  font-weight: 700;
  font-size: 3.4rem;
}

.form-control {
  border: 1px solid #00b4e244;
}

textarea.form-control {
  min-height: calc(5em + (0.75rem + 2px));
}

.submit-button {
  border-color:var(--primary-blue);
  color:var(--primary-blue)
}

.error-msg {
  color: red;
}

